--- a/ansible/roles/cis/tasks/02-fs.yml
+++ b/ansible/roles/cis/tasks/02-fs.yml
@@ -61,3 +61,72 @@
     path: /etc/modprobe.d/cis.conf
     line: 'install vfat /bin/true'
     state: present
+
+- name: 1.1.17 Ensure noexec option set on /dev/shm partition
+  become: true
+  mount:
+    fstype: tmpfs
+    name: "/dev/shm"
+    opts: "defaults,nodev,nosuid,noexec"
+    src: tmpfs
+    state: mounted
+
+- name: 1.1.18 Ensure sticky bit is set on all world-writable directories
+  become: true
+  shell: "df --local -P | awk {'if (NR!=1) print $6'} | xargs -I '{}' find '{}' -xdev -type d -perm -0002 2>/dev/null | xargs chmod a+t"
+  ignore_errors: yes # in case nothing found and input to xargs is empty
+
+- name: 1.1.19 Disable Automounting
+  become: true
+  shell: "systemctl disable autofs"
+  ignore_errors: yes # in case nothing found and input to xargs is empty
+  when:
+    - ansible_facts['system_vendor'] == "Amazon EC2"
+
+- name: 1.3.1 Ensure AIDE is installed
+  become: true
+  yum:
+    name: aide
+    state: latest
+
+- name: 1.3.2 Ensure filesystem integrity is regularly checked - once a day
+  become: true
+  cron:
+    name: "run aide"
+    job: "/usr/sbin/aide --check"
+    hour: 5
+    minute: 0
+
+- name: 1.4.1 Ensure permissions on bootloader config are configured
+  become: true
+  file:
+    path: "{{ item }}"
+    owner: root
+    group: root
+    mode: og-rwx
+    state: touch
+  with_items:
+    - /boot/grub2/user.cfg
+    - /boot/grub2/grub.cfg
+  ignore_errors: yes
+
+- name: 1.5.1 Make sure /etc/security/limits.conf set to * hard core 0
+  become: true
+  lineinfile:
+    dest: /etc/security/limits.conf
+    regexp: '^[*]'
+    state: present
+    line: '* hard core 0'
+    backup: no
+
+- name: 1.7.1.2 Write a new /etc/issue
+  become: true
+  template:
+    src: issue.j2
+    dest: /etc/issue
+
+- name: 1.7.1.3 Write a new /etc/issue.net
+  become: true
+  template:
+    src: issue.net.j2
+    dest: /etc/issue.net
