--- a/ansible/roles/cis/tasks/main.yml
+++ b/ansible/roles/cis/tasks/main.yml
@@ -6,3 +6,4 @@
   - include_tasks: 03-services.yml
   - include_tasks: 04-logging-and-auditing.yml
   - include_tasks: 05-access-authentication-and-authorization.yml
+  - include_tasks: 06-system-maintenance.yml
